# MonteCarloPorker

./: MonteCarloPorker.cabal  README.md  StatPorker.cabal  stack.yaml
app/: Main.hs  Test.hs
