name:                MonteCarloPorker
version:             0.1.0.1
synopsis:            playing texas holdem poker
description:         for https://github.com/akawashiro/MonteCarloPorker
homepage:            https://github.com/akawashiro/MonteCarloPorker
license:             BSD3
license-file:        LICENSE
author:              tune
maintainer:          https://github.com/akawashiro/
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Poker
                     , Game.Poker.Hands
                     , Game.Poker.Cards
                     , Game.Poker.AI
                     , Game.Poker.Simple
  build-depends:       base >= 4.7 && < 5
                     , random-shuffle
                     , safe
                     , random
                     , Unique
  default-language:    Haskell2010

executable MCP
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MonteCarloPorker
  default-language:    Haskell2010

executable MCP-simple
  hs-source-dirs:      app
  main-is:             Simple.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MonteCarloPorker
  default-language:    Haskell2010

executable MCP-pos
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MonteCarloPorker
                     , Unique
                     , random-shuffle
                     , random
  default-language:    Haskell2010

test-suite MCP-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MonteCarloPorker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akawashiro/MonteCarloPorker
