name:                StatPorker
version:             0.1.0.1
synopsis:            playing texas holdem poker
description:         for https://github.com/akawashiro/StatPorker
homepage:            https://github.com/akawashiro/StatPorker
license:             BSD3
license-file:        LICENSE
author:              tune
maintainer:          https://github.com/akawashiro/
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Poker
                     , Game.Poker.Hands
                     , Game.Poker.Cards
                     , Game.Poker.AI
                     , Game.Poker.Simple
  build-depends:       base >= 4.7 && < 5
                     , random-shuffle
                     , safe
                     , random
                     , Unique
  default-language:    Haskell2010

executable stat
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StatPorker
                     , Unique
                     , random-shuffle
                     , random
                     , containers
                     , table-layout
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akawashiro/StatPorker
